[package]
name = "cdc-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3.3"
ring = "0.16.20"
data-encoding = "2.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
markdown-table = "0.2.0"
ctr = "0.9.2"
aes = "0.8.3"
byteorder = "1.4.3"
rayon = "1.7.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
adler32 = "1.2.0"
probability = "0.20.3"
num-traits = "0.2.16"
itertools = "0.11.0"
regex = "1.9.3"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
